--- a/styles/rock-paper-scissors.css
+++ b/styles/rock-paper-scissors.css
@@ -38,7 +38,7 @@ body{
 }
 
 .reset-score-button,
-.auto-play-button{
+.autoplay-button{
   background-color: white;
   border: none;
   font-size: 15px;
